// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project - Add Jobs - Paymarkets Component should be checked if paymarket is selected 1`] = `
<pf-paymarkets
  defaultPaymarket$={[Function Store]}
  loadingPaymarkets$={[Function Store]}
  loadingPaymarketsError$={[Function Store]}
  paymarkets$={[Function Observable]}
  searchTerm$={[Function Store]}
  searchTermSubscription={[Function Subscriber]}
  selectedPaymarkets={[Function Array]}
  selectedPaymarkets$={[Function Observable]}
  store={[Function Store]}
  visiblePaymarkets$={[Function Observable]}
>
  <div
    class="paymarkets-container"
  >
    <div
      class="search-filter"
    >
      <pf-input-debounce
        id="txt-search-paymarkets"
      />
    </div>
    <div
      class="paymarket-results"
    >
      <pf-async-container>
        
        
        
        <div>
          <div
            class="paymarket-result"
            title="New Paymarket"
          >
            <div
              class="paymarket-check"
            >
              <input
                data-qa-id="chk-select-paymarket-1234"
                type="checkbox"
              />
              New Paymarket 
            </div>
            
          </div>
        </div>
        
      </pf-async-container>
      
    </div>
  </div>
</pf-paymarkets>
`;

exports[`Project - Add Jobs - Paymarkets Component should not show default badge when paymarket is not default 1`] = `
<pf-paymarkets
  defaultPaymarket$={[Function Observable]}
  loadingPaymarkets$={[Function Store]}
  loadingPaymarketsError$={[Function Store]}
  paymarkets$={[Function Observable]}
  searchTerm$={[Function Store]}
  searchTermSubscription={[Function Subscriber]}
  selectedPaymarkets={[Function Array]}
  selectedPaymarkets$={[Function Store]}
  store={[Function Store]}
  visiblePaymarkets$={[Function Observable]}
>
  <div
    class="paymarkets-container"
  >
    <div
      class="search-filter"
    >
      <pf-input-debounce
        id="txt-search-paymarkets"
      />
    </div>
    <div
      class="paymarket-results"
    >
      <pf-async-container>
        
        
        
        <div>
          <div
            class="paymarket-result"
            title="New Paymarket"
          >
            <div
              class="paymarket-check"
            >
              <input
                data-qa-id="chk-select-paymarket-1"
                type="checkbox"
              />
              New Paymarket 
            </div>
            
            <div
              class="badge badge-info default-badge"
            >
               Default 
            </div>
          </div>
        </div>
        
      </pf-async-container>
      
    </div>
  </div>
</pf-paymarkets>
`;

exports[`Project - Add Jobs - Paymarkets Component should show default badge on default paymarket 1`] = `
<pf-paymarkets
  defaultPaymarket$={[Function Observable]}
  loadingPaymarkets$={[Function Store]}
  loadingPaymarketsError$={[Function Store]}
  paymarkets$={[Function Observable]}
  searchTerm$={[Function Store]}
  searchTermSubscription={[Function Subscriber]}
  selectedPaymarkets={[Function Array]}
  selectedPaymarkets$={[Function Store]}
  store={[Function Store]}
  visiblePaymarkets$={[Function Observable]}
>
  <div
    class="paymarkets-container"
  >
    <div
      class="search-filter"
    >
      <pf-input-debounce
        id="txt-search-paymarkets"
      />
    </div>
    <div
      class="paymarket-results"
    >
      <pf-async-container>
        
        
        
        <div>
          <div
            class="paymarket-result"
            title="New Paymarket"
          >
            <div
              class="paymarket-check"
            >
              <input
                data-qa-id="chk-select-paymarket-1234"
                type="checkbox"
              />
              New Paymarket 
            </div>
            
            <div
              class="badge badge-info default-badge"
            >
               Default 
            </div>
          </div>
        </div>
        
      </pf-async-container>
      
    </div>
  </div>
</pf-paymarkets>
`;

exports[`Project - Add Jobs - Paymarkets Component should show no data message when no paymarkets match filter 1`] = `
<pf-paymarkets
  defaultPaymarket$={[Function Store]}
  filterString={[Function String]}
  loadingPaymarkets$={[Function Store]}
  loadingPaymarketsError$={[Function Store]}
  paymarkets$={[Function Observable]}
  searchTerm$={[Function Observable]}
  searchTermSubscription={[Function Subscriber]}
  selectedPaymarkets={[Function Array]}
  selectedPaymarkets$={[Function Store]}
  store={[Function Store]}
  visiblePaymarkets$={[Function Observable]}
>
  <div
    class="paymarkets-container"
  >
    <div
      class="search-filter"
    >
      <pf-input-debounce
        id="txt-search-paymarkets"
      />
    </div>
    <div
      class="paymarket-results"
    >
      <pf-async-container>
        
        
        
        <div>
          <div
            class="paymarket-result hidden"
            title="New Paymarket"
          >
            <div
              class="paymarket-check"
            >
              <input
                data-qa-id="chk-select-paymarket-1234"
                type="checkbox"
              />
              New Paymarket 
            </div>
            
          </div>
        </div>
        
      </pf-async-container>
      
      <div>
        <div
          class="no-data"
        >
          No Data
        </div>
      </div>
    </div>
  </div>
</pf-paymarkets>
`;
